# oto-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-canari.yml  deploy.yml  guard-main.yml  sync-main-to-canari.yml
assets/connector-logos/: README.md
deploy/: Caddyfile.snippet  DEPLOY.md  ingest_acco.py  ingest_boamp.py  oto-mcp.service  refresh_sirene_stock.sh  refresh_sirene_stock_s3.sh
docs/: auth-logto.md  backlog.md  billing.md  browser-automation.md  connector-model.md  connector-vault.md  datastore.md  doctrines.md  email.md  event-loop-perf.md  federation.md  groups-and-roles.md  live-migrations.md  monitoring.md  ownership.md  projects.md  redaction.md  rest-api.md  roles-and-resolution.md  unipile.md  usage-loop.md
docs/adr/: 0018-procedures-et-executions.md
doctrines/: README.md
doctrines/talent-sourcing/: ats-hygiene.md  boolean-search.md  candidate-screening.md  recruiter-outreach.md  talent-sourcing.md
extension/: .gitignore  README.md  background.js  manifest.json
extension/lib/: api.js  auth.js  badge.js  config.js  linkedin.js  pkce.js
extension/popup/: popup.css  popup.html  popup.js
oto_mcp/: __init__.py  access.py  anon_landing.py  anon_oauth.py  anon_visibility.py  api_routes.py  api_routes_atlassian.py  api_routes_billing.py  api_routes_connectors.py  api_routes_contact.py  api_routes_datastore.py  api_routes_folk.py  api_routes_memento.py  api_routes_orgs.py  api_routes_scout.py  api_routes_sirene.py  atlassian_oauth.py  auth_hooks.py  billing.py  billing_runner.py  boamp_refresh.py  brand.py  browser_session.py  browserbase.py  call_axes.py  calllog.py  config.py  connector_activation.py  connector_docs.py  connector_field_schema.py  connector_identities.py  connector_schema_store.py  connector_selection.py  connector_verify.py  connectors.py  credentials_store.py  credits_store.py  crypto.py  datastore.py  datastore_schema.py  (+74 more)
oto_mcp/capabilities/: __init__.py  _authz.py  _mcp_adapter.py  _rest_adapter.py  _types.py  access_admin.py  admin_console.py  agent_context.py  agent_readme.py  audit_log.py  billing.py  capabilities_catalog.py  connectors_account_grants.py  connectors_acl.py  connectors_activation.py  connectors_console.py  connectors_force.py  connectors_identities.py  connectors_instances.py  connectors_selection.py  connectors_sharing.py  connectors_verify.py  docs.py  doctrine_library.py  facts.py  groups.py  groups_doctrine.py  groups_invites.py  groups_members.py  groups_secrets.py  guides.py  inbox.py  kb.py  legal.py  me_legal.py  namespace_access.py  org_console.py  orgs.py  orgs_admin.py  orgs_email_settings.py  (+23 more)
oto_mcp/db/: __init__.py  _conn.py  _init.py  _schema.py  aux_embed.py  backlinks.py  billing.py  connector_grants.py  datastore.py  emails.py  google.py  guides.py  keys.py  legacy.py  legal.py  legal_acceptance.py  opendata.py  platform_instructions.py  projects.py  search.py  tokens.py  unipile.py  upload_tokens.py  usage.py  users.py  visibility.py
oto_mcp/factgraph/: __init__.py  projection.py  prospection.py  schemas.py  store.py
oto_mcp/guides/: bulk-load.md  cognism-filters.md  linkedin-search.md  mcp-apps.md
oto_mcp/tools/: __init__.py  aiark.py  apollo.py  ashby.py  attio.py  boamp.py  brevo.py  brevo_crm.py  brevoauto.py  brightdata.py  calendar.py  chat.py  cloro.py  cognism.py  crunchbase.py  culture.py  datastore.py  docs_app.py  doctrine_run.py  drive.py  droit.py  dvf.py  email.py  figma.py  folk.py  foncier.py  fr.py  fr_stock.py  frenchtech.py  fullenrich.py  gmail.py  gocardless.py  gr.py  greenhouse.py  guide.py  hithorizons.py  http.py  hubspot.py  hunter.py  infosec.py  (+54 more)
scripts/: issue_token.py  migrate_admin_to_super.py  migrate_datastore_to_pg.py  migrate_sqlite_to_pg.py  seed_connector_logos.py  seed_doctrine_library.py  seed_talent_doctrines.py  smoke_capability_connectors_selection.py  smoke_capability_doctrine_library.py  smoke_capability_org_admin.py  smoke_capability_org_members.py  smoke_capability_org_reads.py  smoke_capability_org_secrets.py  smoke_capability_use_org.py  smoke_factgraph.py  smoke_scout_service.py
tests/: test_account_backfill.py  test_account_grants_capability.py  test_add_org_member_promotion.py  test_admin_console.py  test_agent_context.py  test_aiark.py  test_audit_log.py  test_auth_descriptor.py  test_authz_combinators.py  test_b2_b3_consoles.py  test_backlinks.py  test_billing_b1.py  test_billing_b2.py  test_billing_b3_runner.py  test_billing_b4_entitlement.py  test_billing_plans_admin.py  test_billing_sepa.py  test_billing_webhook.py  test_brevo_tools.py  test_bridge_universal.py  test_call_axes_account.py  test_call_axes_group.py  test_call_axes_instance.py  test_call_axes_project.py  test_call_axes_run.py  test_call_context_org_axis.py  test_candidate_defaults.py  test_capabilities_drift.py  test_capability_descriptor.py  test_cascade_walker.py  test_chat_error.py  test_cognism.py  test_compose_session.py  test_connector_activation.py  test_connector_failure_event.py  test_connector_identities.py  test_connector_identities_grants.py  test_connector_instances.py  test_connector_rbac.py  test_connector_schema_store.py  (+143 more)
