[project]
name = "oto-mcp"
version = "0.1.0"
description = "MCP server exposing selected oto-cli connectors as tools (Streamable HTTP, OAuth 2.1)."
requires-python = ">=3.10"
dependencies = [
    "fastmcp[apps]>=3.4.2",  # plancher = dernier (3.4.2) — schéma plat des tools validé dessus (ADR 0009). Extra `apps` = prefab_ui (MCP Apps SEP-1865, UI rendue en iframe) consommé par les tools *_app (cf. tools/foncier.py)
    # lib connecteurs (oto.tools) — PLUS de dép à la CLI (otomata#13). PINNÉ sur un
    # tag git (≠ @main flottant) : une version déployée = une coordonnée reproductible
    # (SHA backend + ce pin). PyPI ne reçoit pas chaque merge (publish manuel, lag) →
    # on tague oto-core et on bump CE pin par PR. Bump = éditer le tag ici ; rollback
    # = revert ce commit (ramène aussi le bon oto-core). Cf. ADR 0020 (deploy/canari).
    # v1.22.0 = client aiark (#160) ; v1.19.0 = serper reviews_all (recensement
    # avis, ADR 0045 B2) ; v1.18.0 = serper census_maps (ADR 0045 B1 — ⚠️ le pin
    # avait régressé à v1.17.0 via un commit concurrent, v1.19.0 le restaure) ;
    # v1.17.0 = fixes Unipile API v2 ; v1.15.0 = cursor limit override
    # unipile_relations (#179) ; 1.14 = status_code.
    # v1.22.0 = AiArkClient (oto.tools.aiark, requalification mount→API #160).
    "oto-core[anonymize] @ git+https://github.com/otomata-tech/oto-core.git@v1.41.0",
    # Patchright = client CDP qui pilote le Chrome HÉBERGÉ Browserbase (connect_over_cdp)
    # pour les connecteurs d'API privée cookie-bound (tools/brevo.py, tools/crunchbase.py).
    # AUCUN browser local sur la box (connect_over_cdp ne lance rien → pas de binaire Chrome
    # requis). Déclaré en DIRECT car le backend n'utilise PAS o-browser (la lib de Chrome
    # LOCAL) : on a donc retiré l'extra `browser` d'oto-core, qui ne servait qu'à tirer
    # patchright transitivement (via o-browser). Le CLI local, lui, garde oto-core[browser].
    "patchright>=0.1.0",
    # Détection des callbacks qui bloquent l'event loop (gel du serveur mono-loop,
    # vécu 2026-07-02) — la détection native asyncio-debug sans son overhead ;
    # consommé par oto_mcp/loop_watch.py (warn journal ≥1s, event Sentry ≥10s).
    "aiodebug>=2.3.0",
    "starlette>=0.37",
    "uvicorn>=0.30",
    "pydantic>=2.0",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    # `oto.tools.google.credentials` importe `google_auth_oauthlib` au top-level
    # (InstalledAppFlow). Vit dans l'extra `google` d'oto-core, NON tiré par
    # `oto-core[anonymize]` → drive_*/gmail_* crashent en prod
    # ('No module named google_auth_oauthlib'). Même cas que `markdown` ci-dessous.
    "google-auth-oauthlib>=1.0",
    # Rendu markdown→HTML des gmail_* (défaut markdown=True). Vit dans l'extra
    # `google` d'oto-cli, mais le serveur installe `oto-cli[browser]` → on le
    # déclare ici pour qu'il soit installé par le `pip install -e .` du deploy
    # (oto-mcp#17 : crash 'No module named markdown' en prod).
    "markdown>=3.5",
    # Rendu markdown→HTML SÛR (html=False) des pages de partage server-rendered
    # (public_doc_page.py, /p/d/<token>). Aujourd'hui tiré transitivement (rich) ;
    # déclaré direct car on en dépend au runtime d'une route publique.
    "markdown-it-py>=3.0",
    "otomata-calllog>=0.1.1",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    # france-opendata : plus de dép DIRECTE (ADR 0028 extraction totale — foncier/fr/
    # urba/sante/frenchtech + SIRENE/DILA/BOAMP/ACCO passent tous par le service FOD).
    # Reste tirée TRANSITIVEMENT par oto-core (>=0.7.0, base sans extras) pour le seul
    # SireneClient keyé INSEE, qui reste in-process (FOD ne porte aucun credential).
    # Le backend n'exécute plus AUCUN DuckDB in-process → extras [stock,sante] retirés.
    "cryptography>=42",
    "boto3>=1.34",  # upload avatars/logos → Scaleway Object Storage (S3-compatible)
    "python-multipart>=0.0.9",  # parsing multipart des uploads (Starlette request.form())
    "sentry-sdk[starlette]>=2.0",  # error tracking SaaS (gaté OTO_SENTRY_DSN) : 500 REST via intégration Starlette + exceptions tools MCP via middleware (sentry_setup.py)
]

[project.optional-dependencies]
# NB : plus AUCUNE dépendance vers du code client (ex-extra `mm`) — les
# connecteurs client-sensibles sont des bridges distants consommés par le
# middleware générique tools/remote.py (ADR 0003, meta-repo otomata).
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
oto-mcp = "oto_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["oto_mcp*"]
